2012-06-28  Elliott Sprehn  <esprehn@gmail.com>

        frameborder="no" on frameset is ignored if border attribute set
        https://bugs.webkit.org/show_bug.cgi?id=17767

        Reviewed by Tony Chang.

        Add lots of tests for <frameset> frameborder and border handling.

        * fast/frames/frameset-frameborder-boolean-values-expected.txt: Added.
        * fast/frames/frameset-frameborder-boolean-values.html: Added.
        * fast/frames/frameset-frameborder-inheritance-expected.txt: Added.
        * fast/frames/frameset-frameborder-inheritance.html: Added.
        * fast/frames/frameset-frameborder-overrides-border-expected.txt: Added.
        * fast/frames/frameset-frameborder-overrides-border.html: Added.

2012-06-28  Joshua Bell  <jsbell@chromium.org>

        IndexedDB: Implement IDBTransaction internal active flag
        https://bugs.webkit.org/show_bug.cgi?id=89379

        Reviewed by Tony Chang.

        * storage/indexeddb/resources/transaction-active-flag.js: Added.
        * storage/indexeddb/resources/transaction-basics.js:
        (completeCallback): Empty transactions now commit rather than abort.
        (emptyCompleteCallback):
        * storage/indexeddb/resources/transaction-complete-workers.js: Renamed from LayoutTests/storage/indexeddb/resources/transaction-abort-workers.js.
        * storage/indexeddb/structured-clone.html: Assumed empty transactions aborted.
        * storage/indexeddb/transaction-active-flag-expected.txt: Added.
        * storage/indexeddb/transaction-active-flag.html: Added.
        * storage/indexeddb/transaction-basics-expected.txt:
        * storage/indexeddb/transaction-complete-with-js-recursion-cross-frame-expected.txt: Renamed from LayoutTests/storage/indexeddb/transaction-abort-with-js-recursion-cross-frame-expected.txt.
        * storage/indexeddb/transaction-complete-with-js-recursion-cross-frame.html: Renamed from LayoutTests/storage/indexeddb/transaction-abort-with-js-recursion-cross-frame.html.